packages/errors/test/__snapshots__/CANNOT_CONNECT_BASE_URL.ansi
[31mCypress failed to verify that your server is running.[39m
[31m[39m
[31mPlease start this server and then run Cypress again.[39m